--- a/WpfApp_CurrencyConverter/WpfApp_CurrencyConverter.csproj
+++ b/WpfApp_CurrencyConverter/WpfApp_CurrencyConverter.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
     <Folder Include="ViewModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
